[gd_scene load_steps=3 format=3 uid="uid://b3jq7niiq1kao"]

[ext_resource type="Script" path="res://UI/export_ui_panel.gd" id="1_weyhw"]
[ext_resource type="Texture2D" uid="uid://l2mj11665y7m" path="res://Assets/structures/minatures/export_center.webp" id="2_n17eq"]

[node name="ExportUI" type="PanelContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 670)
offset_right = 400.0
offset_bottom = 670.0
script = ExtResource("1_weyhw")

[node name="Icon" type="Control" parent="."]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="Icon"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
offset_top = -74.0
offset_right = 100.0
offset_bottom = 26.0
texture = ExtResource("2_n17eq")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GrownVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="TileHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 2

[node name="WindowTileLabel" type="Label" parent="MarginContainer/GrownVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Exchange Hub"

[node name="Coords" type="Label" parent="MarginContainer/GrownVBoxContainer/TileHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 6
tooltip_text = "Coords"
mouse_filter = 1
text = "[1,23]"

[node name="HelpButton" type="Button" parent="MarginContainer/GrownVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Export Mushroom Structure

Exports resources through mycelium to soil. Allows other organisms to absorb these resources and form forests."
text = " ? "

[node name="CloseButton" type="Button" parent="MarginContainer/GrownVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="TargetWaterLabel" type="Label" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Water Target: Ensure at least 5 units of water to kickstart plant growth. Adequate hydration is key to thriving flora and ecosystem expansion."
mouse_filter = 1
text = "Target Water:"

[node name="WaterAmountHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Water Target: Ensure at least 5 units of water to kickstart plant growth. Adequate hydration is key to thriving flora and ecosystem expansion."

[node name="WaterAmountDisplay" type="Label" parent="MarginContainer/GrownVBoxContainer/WaterAmountHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "3"

[node name="Control" type="Control" parent="MarginContainer/GrownVBoxContainer/WaterAmountHBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="WaterHSlider" type="HSlider" parent="MarginContainer/GrownVBoxContainer/WaterAmountHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
value = 3.0

[node name="Control3" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="TargetMineralsLabel" type="Label" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Mineral Target: A minimum of 3 units of minerals is essential for nurturing robust plant life. Minerals fuel the foundational growth, leading to a more vibrant and diverse ecosystem."
mouse_filter = 1
text = "Target Minerals:"

[node name="MineralsAmountHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Mineral Target: A minimum of 3 units of minerals is essential for nurturing robust plant life. Minerals fuel the foundational growth, leading to a more vibrant and diverse ecosystem."

[node name="MineralsAmountDisplay" type="Label" parent="MarginContainer/GrownVBoxContainer/MineralsAmountHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "3"

[node name="Control" type="Control" parent="MarginContainer/GrownVBoxContainer/MineralsAmountHBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="MineralsHSlider" type="HSlider" parent="MarginContainer/GrownVBoxContainer/MineralsAmountHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/GrownVBoxContainer"]
layout_mode = 2

[node name="Control6" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="RadiusHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="RadiusLabel" type="Label" parent="MarginContainer/GrownVBoxContainer/RadiusHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "Radius: 5"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/GrownVBoxContainer/RadiusHBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/GrownVBoxContainer/RadiusHBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="RadiusHSlider" type="HSlider" parent="MarginContainer/GrownVBoxContainer/RadiusHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
value = 2.0

[node name="Control10" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="expand_radius" type="Button" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Expand mycelium to cover the whole radius"

[node name="Control9" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="NumberOfTiles" type="Label" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "Tiles: 34"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="WaterLevelHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="WaterLevelLabel" type="Label" parent="MarginContainer/GrownVBoxContainer/WaterLevelHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Current Water Level:"

[node name="WaterProgressBar" type="ProgressBar" parent="MarginContainer/GrownVBoxContainer/WaterLevelHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="MineralsLevelHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="MineralsLevelLabel" type="Label" parent="MarginContainer/GrownVBoxContainer/MineralsLevelHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Current Minerals Level:"

[node name="MineralsProgressBar" type="ProgressBar" parent="MarginContainer/GrownVBoxContainer/MineralsLevelHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Control8" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="StatusHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 10

[node name="ExportStatusLabel" type="Label" parent="MarginContainer/GrownVBoxContainer/StatusHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "Status: Not exporting"

[node name="Control7" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="ExportDoButton" type="Button" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 10
text = " Start Export "

[node name="Control" type="Control" parent="MarginContainer/GrownVBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Control11" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="CarbonDisplay" type="Label" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accumulated Carbon: %.2f"

[node name="SmogPenatly" type="Label" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Smog Impact: Smog reduces the efficiency of carbon production in plants. The higher the smog level, the greater the reduction. This penalty reflects the decreased carbon output due to current smog conditions."
mouse_filter = 1
text = "Smog penalty: %.2f"

[node name="Control4" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CollectCarbonButton" type="Button" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Collect Carbon"

[node name="Control5" type="Control" parent="MarginContainer/GrownVBoxContainer"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="collector_info" type="Label" parent="MarginContainer/GrownVBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Smog Impact: Smog reduces the efficiency of carbon production in plants. The higher the smog level, the greater the reduction. This penalty reflects the decreased carbon output due to current smog conditions."
mouse_filter = 1
text = "! Grow Carbon Sclerotia to collect carbon"

[node name="GrowingVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TileHBoxContainer" type="HBoxContainer" parent="MarginContainer/GrowingVBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 2

[node name="WindowTileLabel" type="Label" parent="MarginContainer/GrowingVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Export"

[node name="HelpButton" type="Button" parent="MarginContainer/GrowingVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Enzymes are used for decomposition of substances and matter. 
Absorbers also need enzymes to function. 
Produced by mycelium."
text = " ? "

[node name="CloseButton" type="Button" parent="MarginContainer/GrowingVBoxContainer/TileHBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="GrowingIndicator" type="Label" parent="MarginContainer/GrowingVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Growing..."
